--- a/src/client/css/diarista.css
+++ b/src/client/css/diarista.css
@@ -290,12 +290,19 @@ input{
     margin-left: 40px;
 }
 
+#container-servicos {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: space-around;
+    overflow-y: scroll;
+    max-height: 100vh;
+}
+
 .card{
     
-    background-color: red;
-
-    margin-right: 30px;
-
-    width: 150px;
-    height: 150px;
+    border: solid 1px grey;
+    border-radius: 5px;
+    padding: 2%;
+    margin: 2%;
 }
