--- a/src/client/css/contratante.css
+++ b/src/client/css/contratante.css
@@ -9,7 +9,10 @@ body {
   height: 100vh;
 }
 
-body, input, textarea, button {
+body,
+input,
+textarea,
+button {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -140,7 +143,7 @@ main {
   height: 90px;
 
   border: 2px rgb(175, 224, 201) groove;
-  
+
   position: fixed;
   right: 6rem;
   bottom: 4rem;
@@ -203,6 +206,10 @@ main {
 #serviceActionBtn.pagamento {
   background-color: #2dc7ab;
   cursor: not-allowed;
+}
+
+#serviceActionBtn.pagamento {
+  cursor: pointer;
 }
 
 #serviceActionBtn.finalizado {
