--- a/src/client/css/diarista.css
+++ b/src/client/css/diarista.css
@@ -128,14 +128,17 @@ main {
 
 .modalInsercao {
   width: 1000px;
-  height: 700px;
+  max-height: 800px;
 
-  border: solid 1px black;
+  border: solid 1px #ccc;
+  border-radius: 10px;
   background-color: #eeecec;
+  box-shadow: 0px 0px 15px 2px #555;
 
   position: absolute;
-  top: 50%;
-  left: 40%;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   display: none;
 }
@@ -153,14 +156,10 @@ main {
 }
 
 #serviceActionBtn {
-  position: absolute;
-  bottom: 15px;
-
   font-size: 20px;
   color: white;
   border-radius: 10px;
 
-  width: 200px;
   height: 50px;
 }
 
@@ -185,17 +184,12 @@ main {
   height: 70px;
   width: 100%;
 
-  position: absolute;
-  bottom: 0px;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .container {
-  height: 50vh;
-
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -275,5 +269,5 @@ input {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
